--- a/app/views/housing/health.html.erb
+++ b/app/views/housing/health.html.erb
@@ -45,9 +45,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "マッサージ","/notes/search" %></h3>
   </div>
-      <div class="panel-body-housing-30">
-
-      </div>
+    <%= image_tag 'health/massage.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -58,9 +56,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "エステ","/notes/search" %></h3>
   </div>
-        <div class="panel-body-housing-31">
-
-      </div>
+        <%= image_tag 'health/este.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -72,9 +68,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "サイクリング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-32">
-
-      </div>
+       <%= image_tag 'health/cicling.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -85,9 +79,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "ヨガ","/notes/search" %></h3>
  </div>
-        <div class="panel-body-housing-33">
-
-      </div>
+      <%= image_tag 'health/ballet.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -99,9 +91,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "栄養士","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-34">
-
-      </div>
+      <%= image_tag 'health/vegies.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -112,9 +102,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "セラピー","/notes/search" %></h3>
      </div>
-   <div class="panel-body-housing-35">
-
-      </div>
+   <%= image_tag 'health/lotus.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -126,10 +114,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "パーソナルシェフ","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-36">
-
-      </div>
-    </div>
+<%= image_tag 'health/chef.png', :class => 'panel-body-housing', :size => 'cover'%>    </div>
   </li>
   </div>
 
@@ -142,9 +127,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "人生相談","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-37">
-
-      </div>
+       <%= image_tag 'health/cheirs.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -154,9 +137,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "カウンセリング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-38">
-
-      </div>
+       <%= image_tag 'health/coffee.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -166,9 +147,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "座禅","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-38">
-
-      </div>
+       <%= image_tag 'health/temple.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -178,9 +157,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ストレッチ","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-38">
-
-      </div>
+       <%= image_tag 'health/strech.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -191,9 +168,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-41">
-
-      </div>
+       <%= image_tag 'health/cooking.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
