--- a/app/views/housing/lesson.html.erb
+++ b/app/views/housing/lesson.html.erb
@@ -36,6 +36,7 @@
 
 
 
+
    <div class="categories">
      <ul>
 
@@ -45,9 +46,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "歌","/notes/search" %></h3>
   </div>
-      <div class="panel-body-housing-40">
-
-      </div>
+      <%= image_tag 'lesson/guitar.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -55,39 +54,43 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "語学","/notes/search" %></h3>
   </div>
-        <div class="panel-body-housing-41">
-
-      </div>
+      <%= image_tag 'lesson/english.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
+
+
+     <li><div class="panel panel-default">
+   <div class="panel-heading">
+     <h3 class="panel-title"><%= link_to "料理","/notes/search" %></h3>
+     </div>
+        <%= image_tag 'lesson/cooking.png', :class => 'panel-body-housing', :size => 'cover'%>
+    </div>
+  </li>
+
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ピアノ","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-42">
-
-      </div>
+         <%= image_tag 'lesson/piano.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
+
+
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "武道","/notes/search" %></h3>
  </div>
-        <div class="panel-body-housing-43">
-
-      </div>
+        <%= image_tag 'lesson/muay.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ヨガ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ウェブ","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-44">
-
-      </div>
+  <%= image_tag 'lesson/coding.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -95,9 +98,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ダンス","/notes/search" %></h3>
      </div>
-   <div class="panel-body-housing-45">
-
-      </div>
+     <%= image_tag 'lesson/dance.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -105,9 +106,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "勉学","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-46">
-
-      </div>
+          <%= image_tag 'lesson/study.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -115,9 +114,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "絵","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-47">
-
-      </div>
+         <%= image_tag 'lesson/paint.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -125,9 +122,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "パーソナルトレーニング","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-48">
-
-      </div>
+         <%= image_tag 'lesson/fitness.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -135,19 +130,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "編み物","/notes/search" %></h3>
      </div>
-       <div class="panel-body-housing-49">
-
-      </div>
-    </div>
-  </li>
-
-   <li><div class="panel panel-default">
-   <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "料理","/notes/search" %></h3>
-     </div>
-       <div class="panel-body-housing-50">
-
-      </div>
+        <%= image_tag 'lesson/crochet.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -155,17 +138,11 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-        <div class="panel-body-housing-51">
-
-      </div>
+         <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
   </div>
-
-
-
-
-
   </div>
  </div>
+
