--- a/app/views/housing/index.html.erb
+++ b/app/views/housing/index.html.erb
@@ -36,7 +36,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
       </div>
-  <%= image_tag 'repair.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= image_tag 'housing/repair.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
      </li>
 
@@ -44,7 +44,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "増設、リモデル","/notes/search" %></h3>
   </div>
-       <%= image_tag 'blueprint.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'housing/blueprint.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -52,7 +52,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コンクリート","/notes/search" %></h3>
      </div>
-        <%= image_tag 'concrete.png', :class => 'panel-body-housing', :size => 'cover'%>
+        <%= image_tag 'housing/concrete.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -60,7 +60,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "ペインティング","/notes/search" %></h3>
  </div>
-   <%= image_tag 'painting.png', :class => 'panel-body-housing', :size => 'cover'%>
+   <%= image_tag 'housing/painting.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -68,7 +68,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "屋根、雨漏り","/notes/search" %></h3>
      </div>
-      <%= image_tag 'roof.png', :class => 'panel-body-housing', :size => 'cover'%>
+      <%= image_tag 'housing/roof.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -76,7 +76,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "壁、階段、フレーミング","/notes/search" %></h3>
      </div>
- <%= image_tag 'floor.png', :class => 'panel-body-housing', :size => 'cover'%>
+ <%= image_tag 'housing/floor.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -84,7 +84,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ドア、窓","/notes/search" %></h3>
      </div>
-    <%= image_tag 'window.png', :class => 'panel-body-housing', :size => 'cover'%>
+    <%= image_tag 'housing/window.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -92,7 +92,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "クリーニング","/notes/search" %></h3>
      </div>
-    <%= image_tag 'cleaning.png', :class => 'panel-body-housing', :size => 'cover'%>
+    <%= image_tag 'housing/cleaning.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -100,7 +100,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "引っ越し","/notes/search" %></h3>
      </div>
-    <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
+    <%= image_tag 'housing/moving.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -109,7 +109,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "大工、木工","/notes/search" %></h3>
      </div>
-   <%= image_tag 'crosscut.png', :class => 'panel-body-housing', :size => 'cover'%>
+   <%= image_tag 'housing/crosscut.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
@@ -118,7 +118,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "配管工事","/notes/search" %></h3>
      </div>
-   <%= image_tag 'plumber.png', :class => 'panel-body-housing', :size => 'cover'%>
+   <%= image_tag 'housing/plumber.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
 
