--- a/app/views/housing/event.html.erb
+++ b/app/views/housing/event.html.erb
@@ -34,7 +34,7 @@
        <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "イベントメイクアップ","/notes/search" %></h3>
        </div>
-    <%= image_tag 'makeup.png', :class => 'panel-body-housing', :size => 'cover'%>
+    <%= image_tag 'event/makeup.png', :class => 'panel-body-housing', :size => 'cover'%>
        </div>
          </li>
   </div>
@@ -45,7 +45,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "結婚司会","/notes/search" %></h3>
   </div>
-         <%= image_tag 'bouquet.png', :class => 'panel-body-housing', :size => 'cover'%>
+         <%= image_tag 'event/bouquet.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -57,7 +57,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バーテンディング","/notes/search" %></h3>
      </div>
-        <%= image_tag 'cocktails.png', :class => 'panel-body-housing', :size => 'cover'%>
+        <%= image_tag 'event/cocktails.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -68,7 +68,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/search" %></h3>
  </div>
-         <%= image_tag 'floral-arrangement.png', :class => 'panel-body-housing', :size => 'cover'%>
+         <%= image_tag 'event/floral-arrangement.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -80,7 +80,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "マジシャン","/notes/search" %></h3>
      </div>
-         <%= image_tag 'magicianhat.png', :class => 'panel-body-housing', :size => 'cover'%>
+         <%= image_tag 'event/magicianhat.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -91,7 +91,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/search" %></h3>
      </div>
-       <%= image_tag 'camera.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'event/camera.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -103,7 +103,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/search" %></h3>
      </div>
-        <%= image_tag 'facepaint.png', :class => 'panel-body-housing', :size => 'cover'%>
+        <%= image_tag 'event/facepaint.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -117,7 +117,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/search" %></h3>
      </div>
-       <%= image_tag 'bride.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'event/bride.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -127,7 +127,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/search" %></h3>
      </div>
-        <%= image_tag 'shoes.png', :class => 'panel-body-housing', :size => 'cover'%>
+        <%= image_tag 'event/shoes.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -137,7 +137,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コメディアン","/notes/search" %></h3>
      </div>
-      <%= image_tag 'microphone.png', :class => 'panel-body-housing', :size => 'cover'%>
+      <%= image_tag 'event/microphone.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -147,7 +147,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "DJ","/notes/search" %></h3>
      </div>
-       <%= image_tag 'record.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'event/record.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -159,7 +159,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-      <%= image_tag 'eyeshadow.png', :class => 'panel-body-housing', :size => 'cover'%>
+      <%= image_tag 'event/eyeshadow.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
