掲載登録レイアウト変更

--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -16,12 +16,12 @@
 .provider_wrapper{width:100%;margin-top:0;height:1400px}
 .provider-introduction{width:73%;height:420px;border-bottom:1px solid #dce0e0;display:block; margin-left:14%;}
 .provider-introduction p{float:left;padding-right:80px;padding-top:50px}
-.face_pic{background-color:gray;width:45%;height:75%;margin-right:40px;float:left;border-radius:2%;}
+.face_pic{width:45%;height:75%;margin-right:40px;float:left;border-radius:2%;}
 
 .service_order_btn{font-size:22px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color:#6495ED;box-shadow:2px 2px #555;margin-left:71%;width:26%; border-radius:3%; margin-top:2%;}
 .service_order_btn:active{box-shadow:0 0 #555;margin-top:3%; }
 
-.provider_service_pictures,.reviews_providers,.rulesfromprovider,.service_explain{float:left;}
+.provider_service_pictures,.reviews_providers,.rulesfromprovider{float:left;}
 
 .provider_wrapper h2{
   font-weight: normal;padding-left: 10px;border-left: solid 3px  #f18d00;font-size: 18px;font-weight: 700;
@@ -34,8 +34,6 @@
 .service-price_provider h1{color:#fff;text-align:center;font-size:40px;padding-top:28px}
 .service-price_provider{background-color:orange;margin-top:-27px;height:100px}
 .fa-jpy{padding-right:16px;font-size:46px}
-.service_explain{height:0 auto;width:73%; margin-left:14%;margin-bottom:20px;margin-top:20px;}
-.service_explain h3{margin-left:750px;margin-top:60px;}
 
 .provider_service_pictures{width:73%;height:420px; margin-left:1%}
 .service_pic{float:left;width:270px;height:300px;margin-top:60px;margin-left:15px}
