--- a/app/views/home/signage.html
+++ b/app/views/home/signage.html
@@ -22,7 +22,6 @@
 
 
 
-
 <div class="policy-wrapper">
     <div class="policy-contents">
 
@@ -48,7 +47,7 @@
   <li>代表者：森川恵美</li>
   </ul>
   <ul>
-  <li>支払い方法と期限：クレジットカード(VISA/MASTER)・銀行振込支払期限につきましては取引によって異なります</li>
+  <li>支払い方法と期限：現金・クレジットカード(VISA/MASTER)・銀行振込支払期限につきましては取引によって異なります</li>
   </ul>
    <ul>
   <li>販売価格：各商品ページに記載しています</li>
