--- a/app/views/housing/health.html.erb
+++ b/app/views/housing/health.html.erb
@@ -127,7 +127,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "人生相談","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/cheirs.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'health/chairs.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
   </div>
@@ -168,7 +168,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/cooking.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
   </li>
  </ul>
