--- a/app/views/layouts/providers_layout.html
+++ b/app/views/layouts/providers_layout.html
@@ -8,8 +8,13 @@
 <!--bodyタグ内のコンテンツの表示はhead内にあるjsの処理が完了してから行われるので、表示が遅くなる   なるべくheadに不要なjs入れない bodyにいれる-->
 
 <body>
+<script src='https://cdn.slaask.com/chat.js'></script>
+<script>
+    _slaask.init('e82bd97e2f19e5c3820785f34a397d1c');
+</script>
 <%= stylesheet_link_tag "application", media: "all" %>
-<div class="provider-header"> <div class="container_head"> 
+<div class="provider-header">
+ <div class="container_head"> 
 <a href="/providers/main"><%= image_tag('whitelogo.png', class: 'logo_2') %></a> 
 
 <ul class="header-right"> <% if provider_signed_in? %>  <%= javascript_include_tag "application" %>
