--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,3 +1,21 @@
+
+  <% if provider_signed_in? %>
+  
+<div class="up-var">
+  <div class="upper-menu">
+    <div class="wrapper" >
+      <ul>
+        <li><a href='/providers/main'>マイページ</a></li>
+        <li><a href='/providers/inbox'>メッセージ</a></li>
+        <li><%= link_to '掲載中', notes_path %></li>
+        <li><a href=''>取引履歴</a></li>
+        <li><a href='/providers'>基本情報</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+ <% else %> 
 <div class="up-var">
  <div class="upper-menu">
     <div class="wrapper" >
@@ -13,6 +31,8 @@
     </div>
   </div>
   </div>
+    <% end %> 
+
 
 <div class="bootstrap">
 <div class="mypage-all_wrapper">
