--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -28,6 +28,8 @@
 }
 
 
+.provider_introduction h3{margin-left: 30%; width:20%;}
+
 .provider-contents{margin-top: 40px;}
 
 
@@ -42,8 +44,4 @@
 
 .reviews_providers{width:73%;height:0 auto;margin-left:14%; }
 .main-image{background-color:gray;height:360px;}
-
-
-
-
 
