--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -1,43 +1,131 @@
 
-<div class="up-var">
- <div class="upper-menu">
-    <div class="wrapper" >
-    <ul>
- <li><a href="/company/index">会社概要</a></li>
-          <li><a href="/company/philosophy">経営理念</a></li>
-          <li><a href="/company/question">よくある質問</a></li>
-
-
-    </ul>
-    </div>
-  </div>
-  </div>
-
-
-
 
 <div class="company_content">
 
-</div>
-
 
   <div class="company_explanation">
-    <h2>Message</h2>
-   
+  <h2>株式会社Seekle</h2>
   </div>
 
 
-  <div class="company_member">
-    <h2>Members</h2>
 
-      <div class="members">
 
-      <div class="member_1">
-        <%= image_tag("emi.png", size: "200x200", class: "member_image_1")%>
-            <p>森川恵美</p>
-            <p>代表</p>
-      </div>
+  <div id="1">
+
+   <div class="company-head">
+     <h1>About Our Service</h1>
+   </div>
+
+   <div class="company_service_mission">
+    <h2>お客さま</h2>
+    <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、満足のいくサービスを提供します。
+     一目で情報がわかるので、いろんなところへ電話して見積もる手間もなく、近くのサービスを簡単に依頼が可能になります。
+   </p>
+ </div>
+
+ <div class="company_service_mission">
+  <h2>サービス提供者の方々</h2>
+  <p>「はやく辞めたい」「自分はこんなことしたいなんて思ってない」と言いながらも毎日会社に通う日々。 <br/>
+    本当にしたいことを 始めようと思っている方 / 既に始めている 方々のために主に集客、レビュー制度、ホームページを作る必要なく広告塔となり、Seekleを通してサポートを努め、日本のビジネスインフラを整備していきます。</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+ <div class="about-company">
+  <div id="2">
+   <div class="company-head">
+     <h1>About Our Company</h1>
+   </div> 
+
+    <table class="company-table">
+     <tbody>
+     <tr>
+      <td>会社名</td>
+      <td>株式会社 Seekle</td>
+    </tr>
+
+     <tr>
+      <td>設立</td>
+      <td>2016年</td>
+    </tr>
+
+     <tr>
+      <td>資本金</td>
+      <td></td>
+    </tr>
+
+     <tr>
+      <td>事業内容</td>
+      <td></td>
+    </tr>
+
+     <tr>
+      <td>代表者</td>
+      <td>森川 恵美</td>
+    </tr>
+
+
+     <tr>
+      <td>株主</td>
+      <td></td>
+    </tr>
+
+
+     <tr>
+      <td>主要取引先</td>
+      <td></td>
+    </tr>
+
+
+    </tbody>
+</table>
 
 
   </div>
 </div>
+
+
+
+
+
+  <div id="3">
+
+   <div class="company-head">
+     <h1>Recruit</h1>
+   </div>
+
+   <div class="company_service_mission">
+    <h2>始まったばかりのサービスを伸ばしていく、会社の立ち上げに興味ある方を募集！</h2>
+    <p>会社にいるのは現在、代表の私だけです。本当に初期のメンバーとしてジョインしてくださる方を募集しています！
+   </p>
+ </div>
+
+
+</div>
+
+
+
+
+
+
+
+
+<a class="button" href="#">page top</a>
+
+ </div>
+
+
+
+ 
+
+
+
+
+
+
