--- a/app/views/company/question.html.erb
+++ b/app/views/company/question.html.erb
@@ -1,29 +1,4 @@
 
-<div class="up-var">
- <div class="upper-menu">
-    <div class="wrapper" >
-    <ul>
- <li><a href="/company/index">会社概要</a></li>
-          <li><a href="/company/philosophy">経営理念</a></li>
-          <li><a href="/company/question">よくある質問</a></li>
-
-
-
-    </ul>
-    </div>
-  </div>
-  </div>
-
-
-
-
-
-<div class="company_content">
-<h1>よくある質問</h1>
-</div>
-
-
-
   <div class="company_question">
 
   <div class="left-menu">
@@ -32,17 +7,15 @@
     <li>サービス依頼について</li>
     <li>プロバイダーについて</li>
   </ul>
-
   </div>
-
 
 <div class="questions-wrapper">
 
 <h1>Seekleについて</h1>
   <div class="question">
     <h2>Q1. Seekleって何ですか？</h2>
-    <p>Seekleは各種サービスを提供するプロバイダーとそのサービスを求めるユーザーとが繋がり、簡単に契約することのできる場を提供するマッチングサービスです。
-    <br>(例: 英語を習いたい！ ⇄ 留学から帰ってきて教えられる力があるが、使う場所がない)</p>
+    <p>Seekleではあなたの求めるサービスをオンラインで簡単に依頼できる、サービスのプラットフォームです。
+    <br>値段が明確で、様々な業者を一目で比較することができます。</p>
   </div>
 
  <div class="question">
@@ -60,9 +33,8 @@
     <p>お申込みにあたりご不明な点がございましたら、お気軽に080-3037-2965までお問い合わせください。
 また、お問い合わせについては、seekle.info@gmail.comもしくはお問い合わせフォームでも受付しております。ご連絡をいただければ、出来る限り迅速な回答をいたします。
 「サポートにも感動を」をコンセプトにサポートチーム一同、お問い合わせをお待ちしております。</p>
+   </div>
   </div>
-
-
-  </div>
-
 </div>
+
+
