change user_name to name

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
     <tr>
      <th> <p>ユーザーネーム <span class="form-label required">必須</span></p></th>
      <td>
-     <%= f.text_field :user_name, class: "form-control image-field" %>
+     <%= f.text_field :name, class: "form-control image-field" %>
     </td>
   </tr>
 
@@ -43,7 +43,7 @@
      <td>
      <%= f.text_area :profile, class: "form-control image-field" %>
     </td>
-    
+
   </tr>
 
 
@@ -72,7 +72,7 @@
      <%= f.password_field :password_confirmation, class: "form-control image-field" %>
     </td>
   </tr>
-
+  
     <tr>
      <th> <p>現在使用中のパスワード<span class="form-label required">必須</span></p></th>
      <td>
