--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -5,7 +5,7 @@
   </span>
 
   <span class="user-name">
-    <%= note.user.user_name %> さん
+    <%= note.user.name %> さん
   </span>
   <span class="content">
     <%= link_to note.title, note_path(note.id) %>
