--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -10,7 +10,7 @@
 <div class="mypage-all_wrapper">
 
 
-   <h1><%= @note.provider.storename %></h1>
+   <h1><%= @note.provider.name %></h1>
    <p class="rates">レビュー 1000件 ★★★★★</p>
 
 <div class="provider-contents">
