--- a/app/views/providers/registrations/new.html.erb
+++ b/app/views/providers/registrations/new.html.erb
@@ -11,13 +11,13 @@
 　<div class="field">
     <h3>店舗名</h3>
 
-    <%= f.text_field :storename, autofocus: true %>
+    <%= f.text_field :name, autofocus: true %>
   </div>
 
 
   <div class="field">
     <h3>店長(代表者名)</h3>
-    <%= f.text_field  :storename, autofocus: true %>
+    <%= f.text_field  :name, autofocus: true %>
   </div>
 
   <div class="field">
