--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
  <div class="name_field">
     <%= f.label :ユーザーネーム %><br />
-    <%= f.text_field :user_name,  autofocus: true%>
+    <%= f.text_field :name,  autofocus: true%>
   </div>
 
 
