--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -18,7 +18,7 @@
 <header> <div class="container_head"> <a href="/"><%= image_tag('logo-min.png',class: 'logo') %></a> <ul class="header-right"> <% if user_signed_in? %> <li> <%= link_to 'ダッシュボード',users_path %></li>  <%= javascript_include_tag "application" %> <li> <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li> <% else %> <li><%= link_to 'プロバイダーになる', home_pro_path %></li> <li> <%= link_to 'アカウント作成', new_user_registration_path %></li> <li><%= link_to 'ログイン', new_user_session_path %></li> <% end %> </ul> </div></header> <div class="main_content"> <%= yield %> </div><div class="container"> 
 <footer class="footer"> <div class="footer-top"> <div class="row">
 
- <div class="col-sm-3 "> <h3 class="widget-title">Company</h3> <div class="widget-details"><div class="title-list">  <ul> <li><a href="/company/index">会社概要</a></li> <li><a href="/company/philosophy">経営理念</a></li> <li><a href="/company/question">よくある質問</a></li> </ul> </div> </div> </div>
+ <div class="col-sm-3 "> <h3 class="widget-title">Company</h3> <div class="widget-details"><div class="title-list">  <ul> <li><a href="/company/index">運営会社</a></li>  </ul> </div> </div> </div>
 
  <div class="col-sm-3"> <h3 class="widget-title">Customers</h3> <div class="widget-details"> <div class="title-list"> <ul><li><a href="/home/guide">ご利用ガイド</a></li> </ul> </div> </div> </div> 
 
