--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,8 @@
     <div class="wrapper" >
       <ul>
         <li><a href='/users'>マイページ</a></li>
-         <li><a href='/mailbox/inbox'>メッセージ
+         <li><a href='/mailbox/inbox'>メッセージ<div class="bootstrap">
+ <span class="label label-danger pull-right"><%=unread_messages_count%></span></div></a></li>
         <li><a href=''>取引履歴</a></li>
         <li><a href='/users/edit'>基本設定</a></li>
       </ul>
@@ -17,8 +18,20 @@
 <div class="mypage-all_wrapper">
 
 
-   <h1 class="user_page_name"><%= current_user.user_name %>さんのページ  </h1>
+
+
+   <h1 class="user_page_name"><%= current_user.name %>さんのページ  </h1>
       
+
+
+<div class="notification_user">
+<ul>
+  <li><em class="fa fa-inbox fa-lg"></em></li>
+  <li></li>
+</ul>
+
+
+</div>
 
 
 
