--- a/app/assets/stylesheets/dashboard/index.css
+++ b/app/assets/stylesheets/dashboard/index.css
@@ -1,5 +1,5 @@
 .jobstyle-row,.jobstyle-row ul li,.jobstyle-row ul li:hover{-webkit-tap-highlight-color:transparent}.jobstyle-row{text-align:center;cursor:pointer;border-bottom:2px solid #ebebeb;transition:all .5s}.jobstyle-row ul li{text-transform:uppercase;font-size:14px;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}.jobstyle-row ul li:hover{color:gray}.left-wrapper{margin-left:160px;margin-top:20px;float:left;padding-right:20px}.right-wrapper{margin-top:140px;margin-right:150px;float:left}.security-heading{width:241px;height:44px;background-color:#A9A9A9;color:#fff;font-weight:700;clear:left;margin-top:-16px;border-radius:2px} 
-.mypage-all_wrapper h1{float:left;margin-left: 180px; font-weight: 500;  line-height: 1.3em; width:56%; }.mypage-all_wrapper{padding-top:18px;width:100%; }
+.mypage-all_wrapper h1{float:left;margin-left: 180px; font-weight: 500;  line-height: 1.3em; width:56%; }.mypage-all_wrapper{padding-top:18px;width:100%; padding-bottom: 60px;}
 
 .mypage-all_wrapper h3{margin-top:50px} 
 .rates{line-height:0px;margin-left: 185px;   clear: both;}
