--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -68,12 +68,12 @@ clear:both;
 .message_reservetion{margin-top: 6%;}
 
 
-.provider_join_btn{margin-top:10%;margin-left:20%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color: #FA8072
-;box-shadow:2px 2px #808080;width:26%; border-radius:3%; margin-top:2%;}
+.provider_join_btn{margin-top:10%;margin-left:24%;margin-bottom:10%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color: #FA8072
+;box-shadow:2px 2px #808080;width:30%; border-radius:3%; margin-top:2%;}
 .provider_join_btn:active{box-shadow:0 0 ;margin-top:4%; }
 
-.provider_delete_btn{margin-top:10%;margin-left:20%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color: #A52A2A
-;box-shadow:2px 2px #808080;width:26%; border-radius:3%; margin-top:2%;}
+.provider_delete_btn{margin-top:10%;margin-left:24%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color: #A52A2A
+;box-shadow:2px 2px #808080;width:30%; border-radius:3%; margin-top:2%;}
 .provider_delete_btn:active{box-shadow:0 0 ;margin-top:4%; }
 
 
