--- a/app/views/home/guide.html
+++ b/app/views/home/guide.html
@@ -19,30 +19,22 @@
 <i class="fa fa-arrow-down fa-4x"></i>
 
  <div class="guide-explain-wrapper">
- <h2>2.あなたにあったプロバイダーを決めよう</h2>
+ <h2>2.あなたにぴったりのサービスを見つけよう</h2>
 <i class="fa fa-users fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
-
-
-
-
+  <p>価格、口コミ、サービス提供者の方の情報などを見てから自分に合ったものを決めましょう</p>
 
   <p></p>
-
-
-
-
 
  </div>
 <i class="fa fa-arrow-down fa-4x"></i>
 
 
  <div class="guide-explain-wrapper">
- <h2>3.プロバイダーと連絡をとろう</h2>
+ <h2>3.依頼しよう</h2>
 <i class="fa fa-envelope-o fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
+  <p>見つけたら、サービスを予約フォームから依頼しましょう。何か不明点があればサービス提供者の方に<br>メッセージでお問い合わせしましょう。</p>
 
  </div>
 
@@ -53,12 +45,9 @@
  <h2>4.サービスを受けよう！</h2>
 <i class="fa fa-child fa-4x"></i>
 
-  <p>住まい、イベント、習い事、健康、などたくさんのカテゴリーからあなたの求めるサービスを<br>お近くの住まいから見つけることができます。</p>
+  <p>当日は提供者の方と決めた段取りでサービスを受けましょう</p>
 
  </div>
-
-
-
 
 
 
