--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -22,8 +22,9 @@
 <div class="explain-seekle-wrapper">
  <div class="container">
     <div class="Seekle-heading">
-     <h2>プロバイダーとして活躍しませんか</h2>
-      <p>実際にあなたのサービスを必要としている人を見つけ、お金を稼ぐことができます。<br>Seekleではスキルのある方がプロバイダーとして誰でも活躍できる機会を提供します。</p>
+     <h2>サービス提供者として活躍しませんか</h2>
+      <p>実際にあなたのサービスを必要としている人を見つけ、Seekleを通して集客をすることができます。<br>
+      開業し、独立したがお客さんが少ない、いろんな人に自分の提供するサービスを知ってもらえる機会がない。<br>などのお悩みを解決します！</p>
     </div>
   </div>
 </div>
@@ -36,8 +37,8 @@
        <div class="icons">
     <i class="fa fa-clock-o fa-5x"></i>
      </div>
-    <h2>スキマ時間活用</h2>
-<p>子供を送り出した後の空いている時間、仕事帰り、など。人それぞれのスキマ時間にプロバイダーとして活動することで副業としてもSeekleは活躍します。</p>
+    <h2>ホームページ作成不要！</h2>
+<p>店舗のホームページを作るのは大変。。<br>何十万円のお金を払って外注するか、自分でサイトを作成しなければなりません。作っても検索エンジンの上位に上がるのは大手の会社が多いのです。Seekleでは頑張れば頑張るほど、あなたのサービスが上位に上がり広告塔となります！</p>
         </div>
   </div>
      <div class="reasons">
@@ -45,9 +46,10 @@
        <div class="icons">
         <i class="fa fa-user fa-5x"></i>
         </div>
-      <h2>個人経営の方も</h2>
+      <h2>登録費、掲載費無料！</h2>
 
-<p>Seekleは個人経営の方のための広告塔としても利用できます。地域で個人教室を開いてる方など、生徒集めに無料で掲載してみませんか？</p>
+<p>お客様との契約が成立してから手数料の15%をいただきます。<br>それまでの登録料、掲載費は全て無料！
+</p>
         </div>
   </div>
 
@@ -62,7 +64,6 @@
   </div>
   </div>
   </div>
-
 
 
   <div class="message-wrapper">
