--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -5,12 +5,18 @@
  </div>
 </div>
 
+
+
+
+
+
 <div class="provider_wrapper">
 
   <div class="provider-introduction">
     <h1>  <%= @note.title %></h1>
-    <% if @note.provider.provider_pic? %>
-    <%=  image_tag(@note.provider.provider_pic.url, :class => 'face_pic')%>
+    <% if @note.image_1? %>
+   
+    <%= image_tag "/note_images/#{@note.image_1}" ,class: "face_pic"%>
 
     <% else %>
     <%= image_tag 'Seekle_icon.png', :class => 'face_pic'%>
